Fix end game symbol on iOS

--- a/docs/style.css
+++ b/docs/style.css
@@ -63,6 +63,7 @@ html, body {
   padding: 5px 10px 10px 20px;
   border-radius: 0 0 0 20px;
   color: white;
+  font-weight: bold;
 }
 
 #finalScore {
